--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.2.0",
     "@react-native-firebase/auth": "^10.2.0",
+    "@react-native-firebase/database": "^10.8.1",
     "axios": "^0.21.1",
     "expo": "~39.0.2",
     "expo-splash-screen": "~0.6.2",
