--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "react-devtools": "^4.10.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
+    "react-native-exception-handler": "^2.10.9",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
+    "react-native-swipe-list-view": "^3.2.6",
+    "react-native-swipeout": "^2.3.6",
     "react-native-unimodules": "~0.11.0",
     "react-native-web": "^0.15.0",
     "react-navigation": "^4.4.4",
