--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-unimodules": "~0.11.0",
     "react-native-web": "^0.15.0",
+    "react-native-webp-format": "^1.1.2",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
     "react-navigation-stack": "^2.10.3"
@@ -53,11 +54,13 @@
     "transformIgnorePatterns": [
       "/node_modules/native-base/"
     ],
-    "setupFilesAfterEnv": ["jest-enzyme"],
+    "setupFilesAfterEnv": [
+      "jest-enzyme"
+    ],
     "testEnvironment": "enzyme",
     "testEnvironmentOptions": {
-        "enzymeAdapter": "react16"
-    }  
-},
+      "enzymeAdapter": "react16"
+    }
+  },
   "private": true
 }
