--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.13.1",
     "react-devtools": "^4.10.1",
     "react-native": "~0.63.3",
+    "react-native-credit-card-display": "^0.3.6",
     "react-native-exception-handler": "^2.10.9",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-reanimated": "^1.13.2",
