--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-stripe-api": "^0.1.0",
+    "react-native-stripe-payments": "^1.0.7",
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-swipeout": "^2.3.6",
     "react-native-unimodules": "~0.11.0",
